fix overflow-x problem

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body{
+html , body{
     font-family:'Quicksand';
     background-color: #1e1e1e;
     overflow-x: hidden;
@@ -16,11 +16,11 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    left: calc(50vw - 75px);
-    top: -75px;
+    left: calc(50vw - 60px);
+    top: -60px;
     position: fixed;
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     background-color: rgb(255, 174, 0);
     border-radius: 50%;
     z-index: 1;
@@ -49,6 +49,7 @@ body{
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    width: 100vw;
     transition: .5s ease all;
 }
 
@@ -59,10 +60,10 @@ body{
 }
 
 .left{
-    transform: translateX(50%);
+    transform: translateX(50vw);
 }
 .right{
-    transform: translateX(-50%);
+    transform: translateX(-50vw);
 }
 
 .content h1{
@@ -128,4 +129,15 @@ ul li a{
 }
 ul li a:hover{
     color: rgb(255, 174, 0);
+}
+
+
+@media only screen and (max-width : 600px) {
+    #nav-button{
+        left: calc(50vw - 50px);
+        top: -50px;
+        height: 100px;
+        width: 100px;
+        padding: 10px;
+    }
 }
